WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
145853
DFG ASSERTION FAILED: !iterate() on stress/singleton-scope-then-overwrite.js.ftl-eager
https://bugs.webkit.org/show_bug.cgi?id=145853
Summary
DFG ASSERTION FAILED: !iterate() on stress/singleton-scope-then-overwrite.js....
Filip Pizlo
Reported
2015-06-10 13:33:56 PDT
We should disable the assertion for now. But it would be great to find out why this fails.
Attachments
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-06-10 13:36:01 PDT
Removed the assertion in
http://trac.webkit.org/changeset/185427
Filip Pizlo
Comment 2
2015-07-02 15:54:23 PDT
***
Bug 145153
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug