DFG ASSERTION FAILED: !iterate() on stress/singleton-scope-then-overwrite.js.ftl-eager https://bugs.webkit.org/show_bug.cgi?id=145853

Unreviewed, remove the assertion.

* dfg/DFGCSEPhase.cpp:



Canonical link: https://commits.webkit.org/163897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185427 268f45cc-cd09-0410-ab3c-d52691b4dbfc